# weather-data-api2-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
.sdk/def/: weather-data-api-2_0.1.0.json
.sdk/model/: sdk.aontu  sdk.json  sdk.jsonic
go/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  go.mod  weather-data-api2.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
go/core/: config.go  context.go  error.go  helpers.go  operation.go  registry.go  response.go  (+4 more)
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  weather-data-api2.rockspec  weather-data-api2_sdk.lua  weather-data-api2_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  weatherdataapi2_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  weatherdataapi2_sdk.py  weatherdataapi2_types.py
py/core/: context.py  control.py  helpers.py  response.py
py/entity/: weather_entity.py
py/feature/: audit_feature.py  base_feature.py  cache_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  paging_feature.py  rbac_feature.py  streaming_feature.py  telemetry_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_weather_direct.py  test_weather_entity.py
py/utility/: clean.py  feature_add.py  make_context.py  make_error.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_headers.py  prepare_params.py  prepare_query.py  register.py  result_headers.py  transform_response.py
rb/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  WeatherDataApi2_sdk.gemspec  WeatherDataApi2_sdk.rb  WeatherDataApi2_types.rb  config.rb  features.rb
ts/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  package-lock.json  package.json
(+386 files in other folders)
